feat: useGetCartItem HOOK 추가
- queryKeys 파일로 query key 관리

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
       "@pages/*": ["../pages/*"],
       "@styles/*": ["../styles/*"],
       "@components/*": ["components/*"],
+      "@constants": ["constants"],
+      "@customTypes/*": ["customTypes/*"],
       "@hooks": ["hooks"],
       "@services": ["services"],
-      "@types/*": ["types/*"],
       "@utils/*": ["utils/*"]
     }
   },
